--- a/.github/workflows/inspec-compliance-scan.yml
+++ b/.github/workflows/inspec-compliance-scan.yml
@@ -11,16 +11,16 @@ jobs:
       # Step 1: Check out the repository code (your InSpec profile)
       - name: Checkout InSpec Profile from Repository
         uses: actions/checkout@v4
-
+      
       # Step 2: Run the InSpec scan on the local runner
       - name: Run InSpec Scan
-        uses: chef/action-inspec@v1
+        uses: chef/inspec@v1
         with:
           profile: './ssh-baseline'
           target: 'local://'
           # Use the full JSON reporter for rich data
-          reporter: 'cli json' 
-          
+          reporter: 'cli json'
+        
       # Step 3: Store the scan report as a downloadable artifact
       # This is for archival and manual inspection. It runs even if other steps fail.
       - name: Upload InSpec Report as Artifact
@@ -30,11 +30,11 @@ jobs:
           name: inspec-scan-report
           # The default output file from the action is inspec-report.json
           path: inspec-report.json
-
+      
       # Step 4: Push the scan results to DefectDojo
       # This step will only run if the InSpec scan was successful
       - name: Upload Results to DefectDojo
-        uses: DefectDojo/upload-scan-action@v2
+        uses: defectdojo/defectdojo-action@v1
         with:
           # --- Connection Details (from Secrets) ---
           defectdojo_url: ${{ secrets.DEFECTDOJO_URL }}
@@ -43,13 +43,14 @@ jobs:
           # --- Scan Target Details (customize these) ---
           product_name: 'Infrastructure Scans'
           engagement_name: 'CI SSH Scans'
-
+          
           # --- Scan File Details ---
           scan_type: 'Chef InSpec Scan'
           file_path: 'inspec-report.json'
           
           # --- Optional: Advanced Settings ---
           # This will automatically create the Product and Engagement if they don't exist
-          auto_create_context: true 
+          auto_create_context: true
+          
           # This will automatically close findings in DefectDojo that are no longer found in this scan
           close_old_findings: true
