--- a/.github/workflows/inspec-compliance-scan.yml
+++ b/.github/workflows/inspec-compliance-scan.yml
@@ -1,46 +1,25 @@
 name: 'Chef InSpec Compliance Scan'
+
 on:
   workflow_dispatch:
-  
+
 jobs:
   inspec-scan:
     runs-on: ubuntu-latest
-    
     steps:
-      # Step 1: Check out the repository code (your InSpec profile)
-      - name: Checkout InSpec Profile from Repository
+      - name: Checkout Code
         uses: actions/checkout@v4
-      
-      # Step 2: Install InSpec (free version)
-      - name: Install Chef InSpec
-        run: |
-          curl https://omnitruck.chef.io/install.sh | sudo bash -s -- -P inspec
-          inspec --version
-      
-      # Step 3: Run the InSpec scan on the local runner
+
       - name: Run InSpec Scan
-        env:
-          CHEF_LICENSE: accept
-        run: |
-          inspec exec ./ssh-baseline \
-            --target local:// \
-            --reporter cli json:inspec-report.json
-        continue-on-error: true
-          
-      # Step 4: Store the scan report as a downloadable artifact
+        uses: chef/action-inspec@v1
+        with:
+          profile: './ssh-baseline'
+          target: 'local://'
+          reporter: 'cli json'
+
       - name: Upload InSpec Report as Artifact
         if: always()
         uses: actions/upload-artifact@v4
         with:
           name: inspec-scan-report
           path: inspec-report.json
-      
-      # Step 5: Display summary of results
-      - name: Display Scan Summary
-        if: always()
-        run: |
-          if [ -f inspec-report.json ]; then
-            echo "### InSpec Scan Results" >> $GITHUB_STEP_SUMMARY
-            echo "" >> $GITHUB_STEP_SUMMARY
-            echo "Scan completed. Download the full report from artifacts." >> $GITHUB_STEP_SUMMARY
-          fi
