--- a/.github/workflows/inspec-compliance-scan.yml
+++ b/.github/workflows/inspec-compliance-scan.yml
@@ -7,27 +7,29 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-      # Step 1: Check out the repository code (your InSpec profile)
       - name: Checkout InSpec Profile from Repository
         uses: actions/checkout@v4
       
-      # Step 2: Install InSpec (free version)
+      - name: Install Chef Habitat
+        run: |
+          curl https://raw.githubusercontent.com/habitat-sh/habitat/main/components/hab/install.sh | sudo bash
+          
       - name: Install Chef InSpec
         run: |
-          curl https://omnitruck.chef.io/install.sh | sudo bash -s -- -P inspec
+          sudo hab pkg install chef/inspec --channel stable --binlink --force
           inspec --version
+        env:
+          HAB_LICENSE: accept-no-persist
       
-      # Step 3: Run the InSpec scan on the local runner
       - name: Run InSpec Scan
         env:
-          CHEF_LICENSE: accept
+          CHEF_LICENSE: accept-silent
         run: |
           inspec exec ./ssh-baseline \
             --target local:// \
             --reporter cli json:inspec-report.json
         continue-on-error: true
           
-      # Step 4: Store the scan report as a downloadable artifact
       - name: Upload InSpec Report as Artifact
         if: always()
         uses: actions/upload-artifact@v4
@@ -35,7 +37,6 @@ jobs:
           name: inspec-scan-report
           path: inspec-report.json
       
-      # Step 5: Display summary of results
       - name: Display Scan Summary
         if: always()
         run: |
