--- a/.github/workflows/defect-dojo.yml
+++ b/.github/workflows/defect-dojo.yml
@@ -57,7 +57,7 @@ jobs:
           curl -X POST "${{ secrets.DEFECTDOJO_URL }}/api/v2/import-scan/" \
             -H "Authorization: Token ${{ secrets.DEFECTDOJO_TOKEN }}" \
             -F "file=@inspec-report.json;type=application/json" \
-            -F "scan_type=Chef Inspect Log" \
+            -F "scan_type=Chef Inspec" \
             -F "engagement_name=ssh-baseline-ci" \
             -F "product_name=MyProduct" \
             -F "auto_create_context=true"
